<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingVertical="@dimen/spacing_xxl"
    android:paddingHorizontal="@dimen/spacing_xl">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="📡"
        android:textSize="@dimen/text_size_emoji_lg" />

    <TextView
        android:id="@+id/tvErrorTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_no_internet"
        android:textSize="@dimen/text_headline_sm"
        android:textColor="@color/color_on_background"
        android:fontFamily="@font/poppins"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/spacing_md"
        android:gravity="center" />

    <TextView
        android:id="@+id/tvErrorSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_no_internet_subtitle"
        android:textSize="@dimen/text_body_sm"
        android:textColor="@color/color_text_secondary"
        android:fontFamily="@font/poppins"
        android:layout_marginTop="@dimen/spacing_sm"
        android:gravity="center"
        android:lineSpacingMultiplier="1.4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRetry"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_marginTop="@dimen/spacing_lg"
        android:text="@string/btn_retry"
        android:textSize="@dimen/text_body_sm"
        android:textColor="@color/color_on_primary"
        android:paddingHorizontal="@dimen/spacing_xl"
        android:fontFamily="@font/poppins"
        app:backgroundTint="@color/color_primary"
        app:cornerRadius="@dimen/radius_pill"
        app:icon="@drawable/ic_refresh"
        app:iconTint="@color/color_on_primary"
        app:iconSize="16dp" />

</LinearLayout>